<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <parent>
        <artifactId>integral-soa</artifactId>
        <groupId>com.lenovo.m2.integral.soa</groupId>
        <version>1.0-SNAPSHOT</version>
    </parent>
    <modelVersion>4.0.0</modelVersion>

    <artifactId>integral-soa-service</artifactId>
    <packaging>jar</packaging>

    <name>integral-soa-service</name>
    <url>http://maven.apache.org</url>



    <properties>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>

        <!-- Docker & Kubernetes & Jenkins 插件配置 -->
        <project.docker.canDeploy>true</project.docker.canDeploy>
        <project.docker.deployType>canary</project.docker.deployType>     <!-- canary部署模式，支持先部署一部分，待其他项目完成部署再继续剩余pod的部署，期间新老版本将同时运行 -->
        <project.docker.role>svc</project.docker.role>                            <!-- 建议dubbo应用设为 svc, 减少最终 pod 名字的长度 -->
        <project.docker.author>shaoyh2</project.docker.author>
        <project.docker.minReplicas>2</project.docker.minReplicas>
        <project.docker.maxReplicas>10</project.docker.maxReplicas>
        <project.docker.cpu>500m</project.docker.cpu>
        <project.docker.memory>1Gi</project.docker.memory>
        <project.docker.jvmOpts>-Xmx1g -Xms1g -Xmn512m -Xss1m -XX:PermSize=512m -XX:MaxPermSize=512m</project.docker.jvmOpts>
    </properties>
    <dependencies>



        <!--商品接口，判断用户是否可以购买商品-->
        <dependency>
            <groupId>com.lenovo</groupId>
            <artifactId>lenovo-product-redis</artifactId>
            <version>3.1.0-SNAPSHOT</version>
        </dependency>

        <!--积分接口-->
        <dependency>
            <groupId>com.lenovo</groupId>
            <artifactId>mem-points-client</artifactId>
            <version>1.0-SNAPSHOT</version>
            <exclusions>
                <exclusion>
                    <groupId>org.slf4j</groupId>
                    <artifactId>slf4j-log4j12</artifactId>
                </exclusion>
            </exclusions>
        </dependency>

        <dependency>
            <groupId>com.lenovo.m2.integral.soa</groupId>
            <artifactId>integral-soa-api</artifactId>
            <version>1.0-SNAPSHOT</version>
        </dependency>

        <dependency>
            <groupId>com.lenovo.m2.integral.soa</groupId>
            <artifactId>integral-manager</artifactId>
            <version>1.0-SNAPSHOT</version>
        </dependency>

        <dependency>
            <groupId>junit</groupId>
            <artifactId>junit</artifactId>
            <version>4.12</version>
            <scope>test</scope>
        </dependency>
    </dependencies>
    <build>
        <plugins>
            <plugin>
                <artifactId>maven-assembly-plugin</artifactId>
                <version>2.4.1</version>
                <configuration>
                    <finalName>${artifactId}</finalName>
                    <descriptors>
                        <descriptor>src/main/assembly/distribution.xml</descriptor>
                    </descriptors>
                </configuration>
                <executions>
                    <execution>
                        <id>make-assembly</id>
                        <phase>package</phase>
                        <goals>
                            <goal>single</goal>
                        </goals>
                    </execution>
                </executions>
            </plugin>
            <plugin>
                <artifactId>maven-jar-plugin</artifactId>
                <configuration>
                    <classesDirectory>target/classes/</classesDirectory>
                    <archive>
                        <addMavenDescriptor>false</addMavenDescriptor>
                    </archive>
                </configuration>
            </plugin>
            <!-- Kubernetes 插件用于生成 k8s 的 deployment, service, ingress, hpa 配置 -->
            <plugin>
                <groupId>com.lenovo</groupId>
                <artifactId>maven-kubernetes-plugin</artifactId>
                <version>0.0.2-SNAPSHOT</version>
                <executions>
                    <execution>
                        <phase>package</phase>
                        <goals>
                            <goal>build</goal>
                        </goals>
                    </execution>
                </executions>
            </plugin>
            <!-- Docker 插件用于生成 Docker 镜像并发布到镜像仓库，插件执行顺序有影响，放到plugins的末尾 -->
            <plugin>
                <groupId>com.spotify</groupId>
                <artifactId>docker-maven-plugin</artifactId>
                <version>0.4.11</version>
                <executions>
                    <execution>
                        <phase>install</phase>
                        <goals>
                            <goal>build</goal>
                        </goals>
                    </execution>
                </executions>
                <configuration>
                    <dockerDirectory>${project.basedir}</dockerDirectory>
                    <pushImage>true</pushImage>
                    <imageName>
                        dockerhub.lefile.cn/${project.docker.group}/${project.docker.application}-${project.docker.role}:${project.version}
                    </imageName>
                </configuration>
            </plugin>
            <plugin>
                <artifactId>maven-compiler-plugin</artifactId>
                <version>2.3.2</version>
                <configuration>
                    <source>1.6</source>
                    <target>1.6</target>
                    <encoding>UTF-8</encoding>
                </configuration>
            </plugin>
        </plugins>
    </build>
</project>
